crates/elenchus-parser/tests/snapshots/errors__provide_without_a_value.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"PROVIDE k:\\n\")"
---
RESULT: 1 syntax error

PROVIDE  (1 problem)
  syntax  : PROVIDE <name>: true|false
  example : PROVIDE db_ready: true
    line 1, col 11 - PROVIDE expects true or false
      | PROVIDE k:
      |           ^
